# fwupdate

./: Cargo.toml  README.md  fwupdate_mac.toml
src/: logger.rs  main.rs  statics.rs  sysinfo.rs
src/webif/: fwupdate.rs  mod.rs
src/webif/templates/: fwupdate.html  index.html
